fix: Arrow overlap and focus border fixed

--- a/src/Shared/components/form/Select/ReactSelect.scss
+++ b/src/Shared/components/form/Select/ReactSelect.scss
@@ -11,7 +11,7 @@ body {
                 // background: $dark-green-color-700;
                 &--is-focused {
                     @include border-radius (8px);
-                    border: 1px solid $grey-color-100 !important;
+                    // border: 1px solid $grey-color-100 !important;
                     box-shadow: $none;
                     // background: $dark-green-color-700;
                     // border: 1px solid $text-color !important;
@@ -51,7 +51,6 @@ body {
                 @include position($absolute, $top: 0, $right: 0);
                 @include align-items ($center);
                 height: 100%;
-                z-index: 11;
                 &-separator {
                     display: $none;
                 }
